# japan-live-taiwan

./: .gitignore  .prettierignore  AGENTS.md  CRAWLER_PLAN.md  LICENSE  README.md  TICKET_SITE_CRAWLING_APIS.md  commitlint.config.mjs  eslint.config.mjs  japan_live_taiwan_readme_plan.md  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: deploy.yml
.husky/: pre-commit
public/data/: artists.json  candidates.json  crawler_report.json  events.json  organizers.json  platforms.json  venues.json
scripts/: validate-data.ts
scripts/configs/: crawler_sources.yaml
scripts/crawler_utils/: dedupe.py  io.py  match_artist.py  normalize.py  schemas.py  validate_outputs.py
scripts/crawlers/: base.py  kktix.py  mock.py  run_all.py  ticketplus.py
scripts/tests/: test_crawler_utils.py  test_kktix_crawler.py  test_run_all.py  test_ticketplus_crawler.py
scripts/tests/fixtures/kktix/: detail_complete.html  detail_no_price_live_house.html  detail_online.html  list.html
scripts/tests/fixtures/ticketplus/: mainEvents.json  (+4 more)
src/app/: globals.css  layout.tsx  page.tsx
src/app/artists/: page.tsx
src/app/calendar/: page.tsx
src/app/events/: page.tsx
src/app/statistics/: page.tsx
src/app/venues/: page.tsx
src/components/: CalendarView.tsx  ChartBlock.tsx  EventCard.test.tsx  EventCard.tsx  EventExplorer.tsx  EventStatusBadge.tsx  TicketInfo.tsx
src/lib/: data.ts  date.ts  event-utils.ts  schema.test.ts  schema.ts  statistics.test.ts  statistics.ts
src/types/: artist.ts  event.ts  platform.ts  venue.ts
(+2 files in other folders)
