[project]
name = "japan-live-taiwan-crawler"
version = "0.1.0"
description = "Crawler tooling for Japan Live Taiwan candidate event pipeline"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.14.0",
  "lxml>=6.0.0",
  "playwright>=1.56.0",
  "pydantic>=2.12.0",
  "python-dateutil>=2.9.0",
  "pyyaml>=6.0.0",
  "rapidfuzz>=3.14.0",
  "requests>=2.32.0",
]
